--- a/Assignment/Views/Home/History.cshtml
+++ b/Assignment/Views/Home/History.cshtml
@@ -2,10 +2,10 @@
 
 @{
     //ViewData["Title"] = "History";
-    Layout = "~/Views/Shared/_WebLayout.cshtml";
+    Layout = "~/Views/Shared/_WebLayout1.cshtml";
 }
 
-<h1>History</h1>
+<h1 class="text-center">History</h1>
 
 @*<p>
     <a asp-action="Create">Create New</a>
