--- a/Assignment/Views/Home/Login.cshtml
+++ b/Assignment/Views/Home/Login.cshtml
@@ -1,9 +1,9 @@
 ﻿@model ViewWebLogin
 @{
-    Layout = "~/Views/Shared/_WebLayout.cshtml";
+    Layout = "~/Views/Shared/_WebLayout1.cshtml";
 }
 
-<h1 class="bg-info text-white">Login</h1>
+@*<h1 class="bg-info text-white">Login</h1>
 <div class="text-danger" asp-validation-summary="All"></div>
 <div class="row">
     <div class="col-md-4">
@@ -20,5 +20,33 @@
             <button class="btn btn-primary" type="submit">Login</button>
         </form>
     </div>
-</div>
+</div>*@
+<section id="login">
+    <div class="container">
+        <div class="section-header">
+            <h3>Đăng nhập</h3>
+        </div>
+
+        <div class="row text-center">
+            <div class="col-md-6 mr-auto ml-auto">
+                <div class="login-col-2">
+                    <div class="login-form">
+                        <form asp-action="Login" method="post">
+                            <input type="hidden" asp-for="ReturnUrl" />
+                            <div class="form-group">
+                                <label asp-for="Email" class="font-weight-bold text-white"></label>
+                                <input asp-for="Email" class="form-control" required="required" />
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Password" class="font-weight-bold text-white"></label>
+                                <input asp-for="Password" class="form-control" required="required" />
+                            </div>
+                            <div><button type="submit">Đăng nhập</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
