--- a/Assignment/Views/Shared/_WebLoginPartial.cshtml
+++ b/Assignment/Views/Shared/_WebLoginPartial.cshtml
@@ -7,7 +7,7 @@
 @{string fullName = Context.Session.GetString(SessionKey.KhachHang.KH_FullName);}
 @{string cart = Context.Session.GetString("cart");}
 
-<ul class="navbar-nav">
+@*<ul class="navbar-nav">
     <li class="nav-item">
         <a class="nav-link" id="cart" href="/Home/Cart">
             @if (cart != null && cart != "")
@@ -19,29 +19,50 @@
                 <img id="imgCart" src="~/images/cart.png" style="width: 30px" />
             }
         </a>
-    </li>
+    </li>*@
     @if (email != null && email != "")
     {
-        <li class="nav-item">
-            <a id="information" class="nav-link text-dark" href="/Home/Info">Hello @fullName! |</a>
+        <li class="menu-active"><a asp-action="Index" asp-controller="Home">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="/Home/Cart">Giỏ hàng</a></li>
+        <li><a href="/Home/Contact">Liên hệ</a></li>
+        <li><a id="information" href="/Home/Info">@fullName!</a></li>
+        <li><a id="history" href="/Home/History">Đơn hàng </a></li>
+        <li>                           
+            <form asp-area="" asp-controller="Home" asp-action="Logout" method="post" id="logoutForm">
+                <a><button id="logout" type="submit" style="display:contents;">Logout</button></a>
+            </form>  
         </li>
-        <li class="nav-item">
+        @*<li class="nav-item">
             <a id="history" class="nav-link text-dark" href="/Home/History">Đơn hàng |</a>
         </li>
         <li class="nav-item">
             <form asp-area="" asp-controller="Home" asp-action="Logout" method="post" id="logoutForm">
                 <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
-        </li>
+        </li>*@
     }
     else
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" id="register" href="/Home/Register">Đăng ký</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" id="login" href="/Home/Login">Đăng nhập</a>
-        </li>
+        <li class="menu-active"><a asp-action="Index" asp-controller="Home">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="/Home/Cart">Giỏ hàng</a></li>
+        <li><a asp-action="Login" asp-controller="Home">Đăng nhập</a></li>
+        <li><a href="register.html">Đăng ký</a></li>
+        <li><a href="/Home/Contact">Liên hệ</a></li>
     }
-</ul>
+
+<script>
+    function Logout() {
+        $.ajax({
+            type: "POST",
+            url: "/Home/Logout",
+            success: function (result) {
+                location.href = "/Home";
+            }
+        })
+    }
+</script>
+@*</ul>*@
+
 
