View One and Combo

--- a/Assignment/Views/Home/Cart.cshtml
+++ b/Assignment/Views/Home/Cart.cshtml
@@ -92,7 +92,7 @@
             success: function (result) {
                 $("#tr_" + id).hide();
                 $("#spTotal").html(result);
-                alert(result);
+                //alert(result);
                 if (result == "0") {
                     $("#imgCart").attr("src", 'images/cart.png')
                 }
