--- a/Assignment/Views/Home/History.cshtml
+++ b/Assignment/Views/Home/History.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_WebLayout1.cshtml";
 }
 
-<h1 class="text-center">History</h1>
+<h1 class="text-center">Lịch sử</h1>
 
 @*<p>
     <a asp-action="Create">Create New</a>
