--- a/Assignment/Views/Shared/_WebLayout.cshtml
+++ b/Assignment/Views/Shared/_WebLayout.cshtml
@@ -64,9 +64,9 @@
     <!-- Menu Section Start -->
     <section id="food-menu">
         <div class="container">
-            <header class="section-header">
+            @*<header class="section-header">
                 <h3>delicious Food Menu</h3>
-            </header>
+            </header>*@
             @RenderBody()
         </div>
     </section>
