--- a/Assignment/Views/Home/Register.cshtml
+++ b/Assignment/Views/Home/Register.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Assignment.Models.KhachHang
 
 @{
-   Layout = "~/Views/Shared/_WebLayout.cshtml";
+   Layout = "~/Views/Shared/_WebLayout1.cshtml";
 }
 
-<h1>Register</h1>
+@*<h1>Register</h1>
 
 <h4>KhachHang</h4>
 <hr />
@@ -57,7 +57,75 @@
             </div>
         </form>
     </div>
-</div>
+</div>*@
+<section id="login">
+    <div class="container">
+        <div class="section-header">
+            <h3>Đăng ký</h3>
+        </div>
+
+        <div class="row">
+            <div class="container">
+                <div class="login-col-1">
+                    <div class="login-form">
+                        <form asp-action="Register">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label asp-for="EmailKH" class="control-label"></label>
+                                    <input asp-for="EmailKH" class="form-control" />
+                                    <span asp-validation-for="EmailKH" class="text-danger"></span>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label asp-for="FullName" class="control-label"></label>
+                                    <input asp-for="FullName" class="form-control" />
+                                    <span asp-validation-for="FullName" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label asp-for="BirthDay" class="control-label"></label>
+                                    <input asp-for="BirthDay" class="form-control" />
+                                    <span asp-validation-for="BirthDay" class="text-danger"></span>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label asp-for="PhoneNumber" class="control-label"></label>
+                                    <input asp-for="PhoneNumber" class="form-control" />
+                                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label asp-for="Address" class="control-label"></label>
+                                    <input asp-for="Address" class="form-control" />
+                                    <span asp-validation-for="Address" class="text-danger"></span>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label asp-for="Describe" class="control-label"></label>
+                                    <input asp-for="Describe" class="form-control" />
+                                    <span asp-validation-for="Describe" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label asp-for="Password" class="control-label"></label>
+                                    <input asp-for="Password" class="form-control" />
+                                    <span asp-validation-for="Password" class="text-danger"></span>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label asp-for="ConfirmPassword" class="control-label"></label>
+                                    <input asp-for="ConfirmPassword" class="form-control" />
+                                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div><button type="submit" value="Create">Đăng ký</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <div>
     <a asp-controller="Home" asp-action="Index">Back to List</a>
