--- a/Assignment/Views/Shared/_WebLoginPartial.cshtml
+++ b/Assignment/Views/Shared/_WebLoginPartial.cshtml
@@ -7,60 +7,54 @@
 @{string fullName = Context.Session.GetString(SessionKey.KhachHang.KH_FullName);}
 @{string cart = Context.Session.GetString("cart");}
 
-@*<ul class="navbar-nav">
-    <li class="nav-item">
-        <a class="nav-link" id="cart" href="/Home/Cart">
-            @if (cart != null && cart != "")
-            {
-                <img id="imgCart" src="~/images/cartA.png" style="width: 30px" />
-            }
-            else
-            {
-                <img id="imgCart" src="~/images/cart.png" style="width: 30px" />
-            }
-        </a>
-    </li>*@
-    @if (email != null && email != "")
-    {
-        <li class="menu-active"><a asp-action="Index" asp-controller="Home">Home</a></li>
-        <li><a href="menu.html">Menu</a></li>
-        <li><a href="/Home/Cart">Giỏ hàng</a></li>
-        <li><a href="/Home/Contact">Liên hệ</a></li>
-        <li><a id="information" href="/Home/Info">@fullName!</a></li>
-        <li><a id="history" href="/Home/History">Đơn hàng </a></li>
-        <li>                           
-            <form asp-area="" asp-controller="Home" asp-action="Logout" method="post" id="logoutForm">
+@if (email != null && email != "")
+{
+    <li class="menu-active"><a asp-action="Index" asp-controller="Home">Home</a></li>
+    <li class="menu-has-children">
+        <a href="/Home/Menu">Menu</a>
+        <ul>
+            <li><a href="/Home/One">Món</a></li>
+            <li><a href="/Home/Combo">Combo</a></li>
+        </ul>
+    </li>
+    <li><a href="/Home/Cart">Giỏ hàng</a></li>
+    <li><a href="/Home/Contact">Liên hệ</a></li>
+    <li><a href="/Home/Info">@fullName!</a></li>
+    <li><a href="/Home/History">Đơn hàng </a></li>
+    <li>
+        <a href="javascript:Logout();">Logout</a>
+        @*<form asp-area="" asp-controller="Home" asp-action="Logout" method="post" id="logoutForm">
                 <a><button id="logout" type="submit" style="display:contents;">Logout</button></a>
-            </form>  
-        </li>
-        @*<li class="nav-item">
-            <a id="history" class="nav-link text-dark" href="/Home/History">Đơn hàng |</a>
-        </li>
-        <li class="nav-item">
-            <form asp-area="" asp-controller="Home" asp-action="Logout" method="post" id="logoutForm">
-                <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-            </form>
-        </li>*@
-    }
-    else
-    {
-        <li class="menu-active"><a asp-action="Index" asp-controller="Home">Home</a></li>
-        <li><a href="menu.html">Menu</a></li>
-        <li><a href="/Home/Cart">Giỏ hàng</a></li>
-        <li><a asp-action="Login" asp-controller="Home">Đăng nhập</a></li>
-        <li><a href="register.html">Đăng ký</a></li>
-        <li><a href="/Home/Contact">Liên hệ</a></li>
-    }
+            </form>*@
+    </li>
+}
+else
+{
+    <li class="menu-active"><a asp-action="Index" asp-controller="Home">Home</a></li>
+    <li class="menu-has-children">
+        <a href="/Home/Menu">Menu</a>
+        <ul>
+            <li><a href="/Home/One">Món</a></li>
+            <li><a href="/Home/Combo">Combo</a></li>
+        </ul>
+    </li>
+    <li><a href="/Home/Cart">Giỏ hàng</a></li>
+    <li><a asp-action="Login" asp-controller="Home">Đăng nhập</a></li>
+    <li><a href="/Home/Register">Đăng ký</a></li>
+    <li><a href="/Home/Contact">Liên hệ</a></li>
+}
 
 <script>
     function Logout() {
         $.ajax({
             type: "POST",
             url: "/Home/Logout",
+            data: {
+            },
             success: function (result) {
-                location.href = "/Home";
+                window.location = "/Home/Index";
             }
-        })
+        });
     }
 </script>
 @*</ul>*@
