--- a/Assignment/Views/Home/Login.cshtml
+++ b/Assignment/Views/Home/Login.cshtml
@@ -23,7 +23,7 @@
                                 <label asp-for="Password" class="font-weight-bold text-white"></label>
                                 <input asp-for="Password" class="form-control" required="required" />
                             </div>
-                            <div><button type="submit">Đăng nhập</button></div>
+                            <div><button type="submit" onclick="Login()">Đăng nhập</button></div>
                         </form>
                     </div>
                 </div>
