--- a/Assignment/Views/KhachHang/Index.cshtml
+++ b/Assignment/Views/KhachHang/Index.cshtml
@@ -67,8 +67,8 @@
                 @Html.DisplayFor(modelItem => item.Describe)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.KhachHangID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.KhachHangID">Details</a>
+                @*<a asp-action="Edit" asp-route-id="@item.KhachHangID">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.KhachHangID">Details</a>*@
                 @*<a asp-action="Delete" asp-route-id="@item.KhachHangID">Delete</a>*@
             </td>
         </tr>
